# kanban

./: .buildconfig  COPYING  LICENSE  README.md  com.pjakubow.kanban.json  install_schema.sh  kanban.gschema.xml  kanban.py  meson.build  org.gnome.kanban.json  requirements.txt  views.py
data/: meson.build  org.gnome.kanban.appdata.xml.in  org.gnome.kanban.desktop.in  org.gnome.kanban.gschema.xml
data/themes/: Adwaita.css
importer/: trello.py
model/: Board.py  Task.py  TaskList.py
po/: POTFILES
src/: kanban.gresource.xml  kanban.in  main.py  meson.build  settings.py  window.py
src/importer/: trello_importer.py
src/model/: Board.py  Task.py  TaskList.py
src/ui/: board.ui  boardlist.ui  menus.ui  task.ui  window.ui
src/view/: BoardListView.py  BoardView.py  KanbanListView.py  NewTask.py  TaskListView.py  TaskView.py  TextEntry.py
theme/: Adwaita.css
view/: NewTask.py  TaskView.py  TextEntry.py
